--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
     "autoprefixer": "^9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
