--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
+    "cypress": "cypress open",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -64,6 +65,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
     "autoprefixer": "^9",
+    "cypress": "^8.4.1",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
